# OSEngine

./: .gitignore  .gitmodules  CMakeLists.txt
engine/: CMakeLists.txt
engine/application/: CMakeLists.txt
engine/application/include/OSE/: EnumClassFlags.h  Game.h  TypeDefs.h
engine/application/include/OSE/Events/: EventBus.h  EventError.h  EventInput.h  EventPlatform.h  EventWindow.h  Signal.h
engine/application/include/OSE/Graphics/: Color.h  GraphicsConfiguration.h  GraphicsResourceDescriptor.h  GraphicsResourceProxy.h  ResourceID.h
engine/application/include/OSE/Math/: Common.h  Matrix.h
engine/application/include/OSE/Math/Geometry/: Geometry.h
engine/application/include/OSE/Resources/: Image.h
engine/application/include/OSE/System/: FileDevice.h  FileDiskDevice.h
engine/application/src/: FileSystem.cpp  GraphicsResourceDescriptor.cpp  ImageFactory.cpp  Timer.cpp
engine/application/src/Android/: AndroidAssetFile.h  AndroidConsoleLogSink.cpp  AndroidPlatform.cpp  PosixFile.cpp  PosixFileDiskDevice.cpp
engine/application/src/Math/: Cube.cpp  Geometry.cpp  Plane.cpp  Quaternion.cpp
engine/application/src/Win32/: Win32File.h  ose_main_win32.cpp
engine/application/test/: EventBusTest.cpp  MainTest.cpp  TimerTest.cpp
engine/application/test/Math/: MatrixTest.cpp  QuaternionTest.cpp  VectorTest.cpp
engine/core/: CMakeLists.txt
engine/core/include/OSE/: EnumClassFlags.h  Game.h  Input.h  Log.h  Platform.h
engine/core/include/OSE/Events/: Event.h
engine/core/include/OSE/Graphics/: Camera.h  Command.h  GraphicsContext.h  GraphicsDevice.h  GraphicsProgramUniform.h  GraphicsRenderer.h  GraphicsResource.h  GraphicsResourceDescriptor.h  GraphicsResourceProxy.h  Resource.h  ResourceCommand.h  ResourceCommandBuffer.h  ResourceCommandDescriptor.h  ResourceID.h
engine/core/include/OSE/Graphics/Camera/: Camera.h  FPSCamera.h
engine/core/include/OSE/Math/: Common.h  Math.h  Matrix.h  Quaternion.h  Transform.h  Vector.h  Vector3.h
engine/core/include/OSE/Math/Geometry/: Cube.h  Plane.h
engine/core/include/OSE/Resources/: ImageFactory.h
engine/core/include/OSE/System/: ConsoleLogSink.h  File.h  FileSystem.h  Logger.h  TimeStep.h  Timer.h
engine/core/include/ose/: alloc.h  debug.h  typedef.h
engine/core/include/ose/debug/: assertion.h  debugger.h  file_info.h
engine/core/src/: Camera.cpp  File.cpp  FileDevice.cpp  GraphicsDevice.cpp  GraphicsResourceDescriptor.cpp  GraphicsResourceProxy.cpp  Image.cpp  ImageFactory.cpp  Logger.cpp  Platform.cpp  ResourceCommand.cpp  ResourceCommandBuffer.cpp  ResourceID.cpp  Timer.cpp  Vector3.cpp  alloc_posix.cpp  alloc_win.cpp  stb_image.h
engine/core/src/Android/: AndroidAssetFile.cpp  AndroidAssetFile.h  AndroidAssetFileDevice.cpp  AndroidAssetFileDevice.h  AndroidPlatform.cpp  PosixFile.cpp  PosixFile.h  ose_main_android.cpp
engine/core/src/Win32/: Win32ConsoleLogSink.cpp  Win32File.cpp  Win32File.h  Win32FileDiskDevice.cpp  Win32Platform.cpp
engine/core/test/: InputTest.cpp  SignalTest.cpp
engine/core/test/Math/: OperationTest.cpp
engine/dependencies/: CMakeLists.txt
engine/dependencies/glew-2.1.0/: CMakeLists.txt
engine/graphics/: CMakeLists.txt
engine/graphics/OpenGL/: CMakeLists.txt
engine/graphics/OpenGL/include/OSE/Graphics/: GLBuffer.h  GLCommon.h  GLContext.h  GLDevice.h  GLIndexBuffer.h  GLProgram.h  GLProgramUniform.h  GLRenderer.h  GLResource.h  GLResourceProxy.h  GLShader.h  GLState.h  GLTexture.h  GLVertexArray.h  GLVertexBuffer.h  GLVertexDescriptor.h  GLVertexLayout.h  ResourceStorage.h
engine/graphics/OpenGL/src/: GLBuffer.cpp  GLContext.cpp  GLDevice.cpp  GLIndexBuffer.cpp  GLProgram.cpp  GLProgramUniform.cpp  GLRenderer.cpp  GLResourceProxy.cpp  GLShader.cpp  GLTexture.cpp  GLVertexArray.cpp  GLVertexBuffer.cpp  GLVertexDescriptor.cpp  GLVertexLayout.cpp  ResourceStorage.cpp
engine/graphics/OpenGL/src/Android/: AndroidGLContext.cpp  AndroidGLContext.h  AndroidGLDevice.cpp
engine/graphics/OpenGL/src/Desktop/: GLExtensions.cpp
engine/graphics/OpenGL/src/Desktop/Win32/: Win32GLContext.cpp  Win32GLContext.h  Win32GLDevice.cpp
engine/graphics/OpenGL/src/Mobile/: GLExtensions.cpp
engine/graphics/OpenGL/src/Mobile/Android/: AndroidGLContext.cpp  AndroidGLContext.h  AndroidGLDevice.cpp
engine/graphics/OpenGL/src/Win32/: Win32GLContext.cpp  Win32GLContext.h  Win32GLDevice.cpp
engine/log/: log_sink.h  logger.h
engine/memory/: CMakeLists.txt
engine/memory/include/ose/: memory.h  memory.inl  memory_debug.h
engine/memory/include/ose/memory/: i_memory_resource.h  memory_resource.h  memory_resource_access.h  synchronized_memory_resource.h
engine/memory/include/ose/memory/allocator/: linear_allocator.h  system_allocator.h
engine/memory/include/ose/memory/area/: stack_memory_area.h
engine/memory/include/ose/memory/bounds_checker/: no_bounds_checker.h
engine/memory/include/ose/memory/detail/: ptr_algorithms.h  slist_algorithms.h
engine/memory/include/ose/memory/tracker/: basic_tracker.h  no_tracker.h
engine/memory/include/ose/stl/: unique_ptr.h
engine/memory/src/: linear_allocator.cpp  memory.cpp  system_allocator.cpp
engine/memory/test/: CMakeLists.txt  memory_area_test.cpp  memory_resource_test.cpp  system_allocator_test.cpp
sandbox/: CMakeLists.txt
sandbox/Android/app/: build.gradle
sandbox/Android/app/src/main/: AndroidManifest.xml
sandbox/Android/app/src/main/cpp/: main.cpp
sandbox/Android/app/src/main/res/values/: strings.xml
sandbox/Android/gradle/wrapper/: gradle-wrapper.properties
sandbox/Assets/Shaders/: default.glsl.shader  default.glsl.shader.es
sandbox/Common/include/: TestGame.h
sandbox/Common/src/: TestGame.cpp
sandbox/Win32/src/: main.cpp
